# substrate-bank

./: .gitignore  CODEOWNERS  Cargo.toml  Containerfile  README.md  rust-toolchain.toml
.cargo/: config.toml
custom-rpc/: Cargo.toml
custom-rpc/src/: lib.rs
e2e-tests/: package.json
e2e-tests/src/: index.js  nft.js  test.js  util.js
integration-tests/: Cargo.toml
integration-tests/src/: bank.rs  lib.rs  lottery.rs  nft.rs
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/pallet-auction/: Cargo.toml  README.md
pallets/pallet-auction/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/pallet-bank/: Cargo.toml
pallets/pallet-bank/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/pallet-governance/: Cargo.toml  README.md
pallets/pallet-governance/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/pallet-lottery/: Cargo.toml  README.md
pallets/pallet-lottery/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/pallet-nft/: Cargo.toml  README.md
pallets/pallet-nft/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/pallet-roles/: Cargo.toml
pallets/pallet-roles/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/pallet-template/: Cargo.toml
pallets/pallet-template/src/: lib.rs  mock.rs  tests.rs  weights.rs
primitives/: Cargo.toml
primitives/src/: constants.rs  lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  runtime_api.rs
scripts/: benchmark.sh  benchmark_pallet.sh  start_testnet.sh  test_accounts_addresses_and_keys.txt
src/: lib.rs  mock.rs  tests.rs
traits/: Cargo.toml
traits/src/: lib.rs
