[workspace.package]
authors = ["iris.xiaowang@gmail.com"]
edition = "2021"
repository = "git@github.com:IRISxiaowang/substrate-bank.git"
license = "GPL-3.0-only"

[workspace]
members = [
    "node",
    "pallets/pallet-template",
    "pallets/pallet-roles",
    "pallets/pallet-bank",
	"primitives",
	"traits",
    "runtime",
]
resolver = "2"
[profile.release]
panic = "unwind"
