[package]
name = "custom-rpc"
description = "A custom RPC Api for the xy-chain"
authors = ["Iris Xiao Wang <iris.xiaowang@gmail.com>"]
edition = "2021"
license = "MIT-0"
publish = false

[lints]
workspace = true

[dependencies]
xy-chain-runtime = { path = '../runtime' }

anyhow = "1.0"
futures = "0.3.14"
jsonrpsee = { version = "0.16.2", features = ["full"] }
hex = '0.4.3'
serde = { version = '1.0', features = ['derive'] }

primitives = { path = '../primitives' }
traits = { path = '../traits' }

pallet-bank = { path = "../pallets/pallet-bank" }
pallet-governance = { path = "../pallets/pallet-governance" }
pallet-lottery = { path = "../pallets/pallet-lottery" }
pallet-roles = { path = "../pallets/pallet-roles" }

sp-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
sp-rpc = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
