[package]
name = "integration-tests"
version = "0.1.0"
description = "Integration tests for the xy chain runtime."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "MIT-0"
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
xy-chain-runtime = { path = "../runtime" }

[dev-dependencies]
frame-support = {git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
frame-system = {git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
pallet-timestamp = {git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
pallet-transaction-payment = {git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
sp-core = {git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
sp-runtime = {git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
sp-std = {git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
sp-io = {git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }

# Local Dependencies
pallet-bank = {path = "../pallets/pallet-bank" }
pallet-roles = {path = "../pallets/pallet-roles" }
pallet-lottery = {path = "../pallets/pallet-lottery" }
pallet-governance = {path = "../pallets/pallet-governance" }

primitives = {path = "../primitives" }
traits = {path = "../traits" }
