[package]
name = "xy-chain"
version = "0.1.0"
description = "XY chain for learning Substrate."
authors = ["Iris.xiaowang@gmail.com"]
homepage = "https://substrate.io/"
edition.workspace = true
license = "MIT-0"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-xy-chain/"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "xy-chain"

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
futures = { version = "0.3.21", features = ["thread-pool"] }
serde_json = "1.0.108"

sc-cli =  { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0" }
sp-core =  { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0" }
sc-executor =  { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0" }
sc-network =  { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0" }
sc-service =  { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0" }
sc-telemetry =  { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0" }
sc-transaction-pool =  { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0" }
sc-transaction-pool-api =  { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0" }
sc-offchain =  { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0" }
sc-consensus-aura =  { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0" }
sp-consensus-aura =  { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0" }
sc-consensus =  { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0" }
sc-consensus-grandpa =  { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0" }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0" }
sc-client-api =  { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0" }
sp-runtime =  { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0" }
sp-io =  { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0" }
sp-timestamp =  { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0" }
sp-inherents =  { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0" }
sp-keyring =  { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0" }
frame-system =  { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0" }
pallet-transaction-payment =  { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0", default-features = false }

# These dependencies are used for the node template's RPCs
jsonrpsee = { version = "0.16.2", features = ["server"] }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0" }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0" }
sp-blockchain =  { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0" }
sp-block-builder =  { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0" }
sc-basic-authorship =  { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0" }
substrate-frame-rpc-system =  { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0" }
pallet-transaction-payment-rpc =  { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0" }

# These dependencies are used for runtime benchmarking
frame-benchmarking =  { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0" }

# Local Dependencies
xy-chain-runtime = { path = "../runtime" }

# CLI-specific dependencies
primitives = { path = "../primitives" }
try-runtime-cli =  { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0", optional = true }

[build-dependencies]
substrate-build-script-utils =  { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0" }

[features]
default = []
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"xy-chain-runtime/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"frame-system/try-runtime",
	"xy-chain-runtime/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"sp-runtime/try-runtime",
	"try-runtime-cli/try-runtime",
]
