[package]
name = "traits"
version = "0.1.0"
edition = "2021"
description = "Contains traits shared across the code base."

[lints]
workspace = true

[dependencies]
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false , branch = "release-polkadot-v1.6.0" }

primitives = { path = "../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "sp-runtime/std",
    "primitives/std",
]