[package]
name = 'pallet-bank'
version = '0.1.0'
authors = ['Iris xiao Wang']
description = 'banking pallet: provides basic banking operations'
edition = '2021'
license = '<TODO>'
publish = false

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["max-encoded-len"] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", optional = true }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v1.0.0" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v1.0.0" }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v1.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v1.0.0" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v1.0.0" }

primitives = { path = "../../primitives", default-features = false }
traits = { path = "../../traits", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }

pallet-roles = { path = "../pallet-roles"}

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"serde",

	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"sp-arithmetic/std",
	"sp-runtime/std",
	"sp-std/std",

	"primitives/std",
	"traits/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-system/try-runtime",
	"frame-support/try-runtime",
]